<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ActivityEditar"
    android:padding="10dp">

    <!--Nombre de usuario-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/tvUserNameText"/>

    <EditText
        android:id="@+id/edNombreUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Contraseña-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/tvContraText"/>

    <EditText
        android:id="@+id/edContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <!--Repita Contraseña-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/tvContraRepeText"/>

    <EditText
        android:id="@+id/edContraRepetida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>


    <!--Radios button del tipo de usuario-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_gravity="center"
            android:text="@string/tvTipoUserText"/>

        <RadioGroup
            android:id="@+id/rdbGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:checked="true"
                android:id="@+id/rdbAdministrador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdbAdministradorText">
            </RadioButton>
            <RadioButton
                android:id="@+id/rdbUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdbUsuarioText">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

    <!--Boton Guardar-->
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:layout_marginTop="10dp"
        android:text="@string/btnGuardarText"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

</LinearLayout>